--- a/claymore-frontend/package.json
+++ b/claymore-frontend/package.json
@@ -4,32 +4,29 @@
   "private": true,
   "proxy": "",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@geist-ui/core": "^2.3.8",
+    "@geist-ui/react": "^2.2.5",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
+    "@types/material-ui": "^0.21.12",
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
     "cors": "^2.8.5",
+    "cypress": "^9.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.1",
-    "@types/material-ui": "^0.21.12",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.1",
-    "@types/material-ui": "^0.21.12",
-    "cypress": "^9.5.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "prestart": "npm install -g serve",
@@ -50,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-
   }
 }
